# djagger

./: requirements.txt  setup.cfg
.github/workflows/: python-package.yml
djagger/: apps.py  config.py  decorators.py  enums.py  generics.py  openapi.py  serializers.py  utils.py
djagger/management/commands/: djagger_document.py
docs/source/: conf.py
