[metadata]
name = djagger
version = 1.1.4
description = OpenAPI 3 documentation generator for Django using pydantic.
long_description_content_type = text/x-rst
long_description = file: readme.rst
url = https://github.com/stefanmcds-mnt/djagger
download_url = https://github.com/stefanmcds-mnt/djagger/archive/refs/tags/v0.1.0-alpha.tar.gz
author = STEFAN MCDS S.a.s.
author_email = info@stefan-mcds.it
license = MIT License
classifiers =
Environment :: Web Environment
Framework :: Django
Intended Audience :: Developers
License :: OSI Approved :: BSD License
Operating System :: OS Independent
Programming Language :: Python
Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
Django >= 5.1
pydantic >= 2.10
djangorestframework >= 3.15
[mypy]
ignore_missing_imports = True
